# AlphaPulldown

./: .coverage  .coveragerc  .gitignore  .gitmodules  ALPHALINK_FIX_SUMMARY.md  ALPHALINK_ISSUE_524_FINAL_SUMMARY.md  Developing.md  Forking.md  MANIFEST.in  README.md  Snakefile  af3x _input_generator.html  compare_msas.ipynb  conftest.py  create_simple_test.py  environment.yml  example_1.md  example_1_for_pip_user.md  example_1_for_singularity_user.md  example_2.md  example_2_for_pip_user.md  example_2_for_singularity_user.md  example_3.md  fix_test_templates.py  install_cuda_12_6.sh  mmseqs2_manual.md  pip_user_guide.md  pyproject.toml  pytest.ini  run_with_AlphaLink2.md  setup.cfg  setup.py  test_simple_alphalink.py
.github/workflows/: github_actions.yml
.ipynb_checkpoints/: af_msa-checkpoint.sto  ap_msa_with_pairing-checkpoint.sto
alphafold/data/: templates.py
alphafold/model/: modules_multimer.py
alphapulldown/: __init__.py  builders.py  colab_batch_no_prediction.py  convert_to_modelcif.py  create_custom_template_db.py  create_fake_template_db.py  create_individual_features.py  create_individual_features_new.py  create_individual_features_with_templates.py  entry_points.py  features.py  generate_crosslink_pickle.py  multimeric_template_utils.py  objects.py  objects2.py  plot_pae.py  predict_structure.py  prepare_seq_names.py  providers.py  remove_clashes_low_plddt.py  rename_colab_search_a3m.py  run_multimer_jobs.py  run_structure_prediction.py  test_global.py  utils.py
alphapulldown.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alphapulldown/analysis_pipeline/: Dockerfile  README.md  af2_3dmol.py  af2hyde_mod.py  alpha_analysis_jax0.3.def  alpha_analysis_jax0.4.def  calculate_mpdockq.py  calculate_rmsd.py  cctbx_imps.py  create_notebook.py  diagnostics.py  get_good_inter_pae.py  interaction_network.py  obtain_interface_residues.py  pdb_analyser.py  plot_diagnostics.py  plot_interaction_network.py  run_analysis.py  run_execute_notebook.sh  run_get_good_pae.sh  run_pi_score.sh  utils.py
alphapulldown/executables/: convert_to_modelcif.py
alphapulldown/folding_backend/: __init__.py  alphafold2_backend.py  alphafold3_backend.py  alphafold_backend.py  alphalink_backend.py  backend_flags.py  folding_backend.py  unifold_backend.py
alphapulldown/lib/: objects.py
alphapulldown/scripts/: convert_to_modelcif.py  create_individual_features.py  generate_alphafold_server_json.py  parse_input.py  plot_graph.py  prepare_seq_names.py  rename_colab_search_a3m.py  run_multimer_jobs.py  run_multimer_jobs_refactor.py  run_structure_prediction.py  split_jobs_into_clusters.py  truncate_pickles.py
alphapulldown/utils/: af2_to_af3_msa.py  alphafold_server_json.py  calculate_rmsd.py  create_combinations.py  create_custom_template_db.py  distogram_parser.py  file_handling.py  file_handlings.py  lightweight_pickles.py  mmseqs_species_identifiers.py  modelling_setup.py  modelling_setup_utils.py  msa_encoding.py  multimeric_template_utils.py  output_paths.py  plotting.py  post_modelling.py  post_modelling_utils.py  remove_clashes_low_plddt.py  save_meta_data.py
analysis_pipeline/: README.md  calculate_mpdockq.py  create_notebook.py  utils.py
conda/: environment.yml  meta.yaml
conda/conda-meta/: _libgcc_mutex-0.1-conda_forge.json  _openmp_mutex-4.5-2_gnu.json  archspec-0.2.5-pyhd8ed1ab_0.json  boltons-24.0.0-pyhd8ed1ab_1.json  brotli-python-1.1.0-py312h2ec8cdc_2.json  bzip2-1.0.8-h4bc722e_7.json  c-ares-1.34.4-hb9d3cd8_0.json  ca-certificates-2024.12.14-hbcca054_0.json  certifi-2024.12.14-pyhd8ed1ab_0.json  cffi-1.17.1-py312h06ac9bb_0.json  charset-normalizer-3.4.1-pyhd8ed1ab_0.json  colorama-0.4.6-pyhd8ed1ab_1.json  conda-24.11.3-py312h7900ff3_0.json  conda-libmamba-solver-24.9.0-pyhd8ed1ab_0.json  conda-package-handling-2.4.0-pyh7900ff3_2.json  conda-package-streaming-0.11.0-pyhd8ed1ab_0.json  distro-1.9.0-pyhd8ed1ab_1.json  (+68 more)
docker/: Dockerfile  alphafold2.dockerfile  alphafold3.dockerfile  alphafold3.dockerfile.backup  alphalink.dockerfile  analysis.dockerfile  pulldown.dockerfile
docs/: backend_installation.md
example_data/: baits.fasta  baits.txt  baits_Z_protein.txt  candidates.txt  candidates_shorter.txt  custom_mode.txt  example_1_sequences.fasta  example_1_sequences_shorter.fasta  example_2_sequences.fasta  example_all_vs_all_list.txt  example_oligomer_state_file.txt  test_input.fasta
manuals/: AlphaPulldown_manual.md  Developing.md  convert_to_modelcif.md  embo2024.md  example_1.md  example_2.md  example_3.md  fast_and_fold.md  mmseqs2_manual.md  new_multimeric_template_modelling.md  old_manual.md  run_with_AlphaLink2.md
snakemake/: LICENSE  README.md  run_pipeline.sh
snakemake_config/: config.yaml  info.txt
templates_debug/: generated_template_4hjj_H_chainB_idx30.cif  generated_template_5fhx_H_chainB_idx22.cif  generated_template_5hcg_H_chainB_idx24.cif  generated_template_6o89_H_chainB_idx16.cif  generated_template_6o8d_H_chainB_idx18.cif  generated_template_7d30_A_chainB_idx32.cif
test/: .coverage  README.md  RELEASE_READINESS.md  check_af3_with_af2_features.py  check_alphafold2_predictions.py  check_alphafold3_predictions.py  check_alphalink_predictions.py  check_predict_structure.py  conftest.py  create_individual_features_new.py  run_alphalink2_tests.sh  run_tests_on_cpu.sh  test_af2_to_af3_msa.py  test_alphafold2_predictions.py  test_alphafold3_backend.py  test_alphafold3_predictions.py  test_alphalink2_folding_backend.py  test_alphalink_fix.py  test_alphalink_integration.py  test_analysis.py  test_chopped_object_concatenate.py  test_compare_features.py  test_create_individual_features.py  test_create_monomeric_objects.py  test_create_multimeric_objects.py  test_create_multimeric_template_features.py  test_create_objects.py  test_crosslink_inference.py  test_crosslink_input.py  test_custom_db.py  test_dropout_during_inference.py  test_fake_db.py  test_features.py  test_features_with_templates.py  test_get_good_inter_pae.py  test_image.py  test_mmseqs.py  test_mmseqs_species_identifiers.py  test_modelcif.py  test_monomeric_objects.py  (+11 more)
(+2378 files in other folders)
