[metadata]
name = alphapulldown 
version = 1.00.0
author = Dingquan Yu
author_email = dingquan.yu@embl-hamburg.de
description = Pipeline allows massive screening using alphafold
url = https://github.com/KosinskiLab/AlphaPulldown

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=
    alphapulldown
    alphafold
    colabfold
    analysis_pipeline
    af2plots
    unifold 
package_dir = 
    alphapulldown = ./alphapulldown
    alphafold = ./alphafold/alphafold
    colabfold = ./alphapulldown/ColabFold/colabfold
    analysis_pipeline = ./alphapulldown/analysis_pipeline
    af2plots = ./alphapulldown/analysis_pipeline/af2plots/af2plots
    unifold = ./unifold/unifold/
include_package_data = True

python_requires = >=3.8
install_requires = 
    absl-py >= 0.13.0 
    dm-haiku
    dm-tree>=0.1.6
    h5py>=3.1.0
    matplotlib>=3.3.3
    ml-collections>=0.1.0
    numpy
    pandas>=1.3.4
    tensorflow
    importlib-resources==5.8.0
    biopython>=1.78
    nbformat==5.4.0
    py3Dmol==2.0.1
    ipython
    tqdm
    appdirs
    jupyterlab
    ipywidgets
scripts = ./alphapulldown/create_individual_features.py, ./alphapulldown/create_individual_features_with_templates.py, ./alphapulldown/run_multimer_jobs.py, ./alphapulldown/analysis_pipeline/create_notebook.py, ./alphapulldown/rename_colab_search_a3m.py, ./alphapulldown/prepare_seq_names.py
[options.packages.find]
where = ./
exclude = test*

[options.data_files]
lib/python3.8/site-packages/alphafold/common/ = stereo_chemical_props.txt
