[metadata]
name = alphapulldown
author = Dingquan Yu
author_email = dingquan.yu@embl-hamburg.de
description = Pipeline allows massive screening using alphafold
url = https://github.com/KosinskiLab/AlphaPulldown
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=
    alphapulldown
    alphafold
    alphafold.data
    alphafold.data.tools
    alphafold.common
    alphafold.relax
    alphafold.model
    alphafold.model.geometry
    alphafold.model.tf
    alphafold.notebooks
    colabfold
    analysis_pipeline
    af2plots
    unifold
    unifold.data
    unifold.modules
    unifold.msa
    unifold.losses
    unifold.symmetry

package_dir =
    alphapulldown = ./alphapulldown
    alphafold = ./alphafold/alphafold
    colabfold = ./alphapulldown/ColabFold/colabfold
    analysis_pipeline = ./alphapulldown/analysis_pipeline
    af2plots = ./alphapulldown/analysis_pipeline/af2plots/af2plots
    unifold = ./AlphaLink2/unifold/
    unifold.data = ./AlphaLink2/unifold/data
    unifold.losses = ./AlphaLink2/unifold/losses
    unifold.symmetry = ./AlphaLink2/unifold/symmetry
include_package_data = True

python_requires = >=3.8
install_requires = 
    absl-py >= 0.13.0 
    dm-haiku
    dm-tree>=0.1.6
    h5py>=3.1.0
    matplotlib>=3.3.3
    ml-collections>=0.1.0
    numpy
    pandas>=1.5.3
    tensorflow==2.14.0
    importlib-resources>=6.1.0
    biopython==1.81
    nbformat>=5.9.2
    py3Dmol==2.0.4
    ipython==8.16.1
    tqdm>=4.66.1
    appdirs>=1.4.4
    jupyterlab
    ipywidgets
scripts = ./alphafold/run_alphafold.py, ./alphapulldown/create_individual_features.py, ./alphapulldown/run_multimer_jobs.py, ./alphapulldown/analysis_pipeline/create_notebook.py, ./alphapulldown/rename_colab_search_a3m.py, ./alphapulldown/prepare_seq_names.py, ./alphapulldown/generate_crosslink_pickle.py, ./alphapulldown/convert_to_modelcif.py

[options.data_files]
lib/python3.10/site-packages/alphafold/common/ = stereo_chemical_props.txt
lib/python3.10/site-packages/alphafold/ = ./alphafold/run_alphafold.py
